--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "gh": "^2.8.9",
     "react": "^18.2.0",
@@ -37,6 +36,12 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.0"
+    "@testing-library/react": "^14.1.2",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
+    "gh-pages": "^6.1.0",
+    "react-test-renderer": "^18.2.0",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3"
   }
 }
