--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "gh-pages": "^6.1.0",
+    "jest": "^29.7.0",
     "react-test-renderer": "^18.2.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3"
